# BRICK

./: Cargo.toml  opis projektu.txt  opis prototypu.txt
src/: bitmap.rs  graphics.rs  main.rs  screen.rs
