[package]
name = "projekt_koncowy"
version = "0.1.0"
authors = ["Mikołaj Depta <mikolajdepta2000@gmail.com>"]
edition = "2021"

[dependencies]
nalgebra = "0.30.1"
itertools = "0.10.3"

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]
